--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/button_find_description"
+        android:onClick="showDescription"
         app:layout_constraintBottom_toTopOf="@+id/textViewDescriptionTemp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
